syntax = "proto3";

package greet;

message Greeting{
  string firstName = 1;
  string lastName = 2;
}

message GreetRequest{
  Greeting greeting = 1;
}

message GreetResponse{
  string result = 1;
}

service GreetService{
  rpc Greet (GreetRequest) returns (GreetResponse);
}